# mesh

./: .gitignore  CMakeLists.txt  README.md
include/moose/core/: Mat4.h  Vec2.h  Vec3.h  Vec4.h
include/moose/engine/: Engine.h
include/moose/graphics/: Camera.h  ClipVertex.h  Color.h  ColorF.h  Mesh.h  Renderer.h  ScreenTriangle.h  TransformedVertex.h  Vertex.h
include/moose/graphics/raster/: Bary3.h  RasterUtils.h
src/: main.cpp
src/core/: Mat4.cpp
src/engine/: Engine.cpp
src/graphics/: Camera.cpp  Renderer.cpp
